--- a/index.html
+++ b/index.html
@@ -2,87 +2,60 @@
 <html lang="bn">
 <head>
 <meta charset="UTF-8">
-<title>Cloud Mart - Admin (Firebase)</title>
+<title>Cloud Mart - Admin Panel</title>
 <style>
 body { font-family: Arial, sans-serif; background:#f4f4f4; margin:0; padding:0; }
 header { background:#333; color:#fff; padding:15px; text-align:center; font-size:22px; }
 .container { padding:20px; }
 h2 { margin-top:30px; }
-input, select, button, textarea { padding:8px; margin:5px 0; border:1px solid #ccc; border-radius:5px; box-sizing:border-box; }
+.notice { font-size:12px; color:#555; }
+
+/* Horizontal form layout */
+#productForm { display:flex; flex-wrap:wrap; gap:10px; margin-bottom:20px; align-items:flex-start; }
+#productForm input[type=text], 
+#productForm input[type=number], 
+#productForm textarea { flex:1; padding:8px; border:1px solid #ccc; border-radius:5px; }
+#productForm textarea { height:50px; }
+#productForm input[type=file] { flex-basis:100%; }
+#addUpdateBtn { flex-basis:100%; padding:10px; background:#007bff; color:#fff; border:none; border-radius:5px; cursor:pointer; transition:0.3s; }
+#addUpdateBtn:hover { transform:scale(1.05); }
+
 table { width:100%; border-collapse:collapse; margin-top:15px; }
 th, td { border:1px solid #ddd; padding:12px 10px; text-align:center; }
 th { background:#555; color:#fff; }
 button { cursor:pointer; transition:0.3s; }
 button:hover { transform:scale(1.05); }
-.delete { background:#dc3545; color:#fff; border:none; padding:5px 10px; }
-.done { background:#28a745; color:#fff; border:none; padding:5px 10px; }
-.print { background:#007bff; color:#fff; border:none; padding:5px 10px; }
-.edit { background:#ffc107; color:#111; border:none; padding:5px 10px; }
+.delete { background:#dc3545; color:#fff; border:none; padding:5px 10px; border-radius:4px; }
+.done { background:#28a745; color:#fff; border:none; padding:5px 10px; border-radius:4px; }
+.print { background:#007bff; color:#fff; border:none; padding:5px 10px; border-radius:4px; }
+.edit { background:#ffc107; color:#111; border:none; padding:5px 10px; border-radius:4px; }
 img.thumb { width:50px; height:50px; object-fit:cover; border-radius:6px; }
-
-/* Horizontal form layout */
-#productForm { display:flex; flex-wrap:wrap; gap:10px; max-width:100%; align-items:flex-start; }
-#productForm input[type=text], 
-#productForm input[type=number], 
-#productForm textarea { flex:1; }
-#productForm textarea { height:50px; }
-#productForm input[type=file] { flex-basis:100%; }
-#addUpdateBtn { flex-basis:100%; padding:10px; }
-.notice { font-size:12px; color:#555; }
 </style>
 </head>
 <body>
 <header>Cloud Mart - Admin Panel (Firebase)</header>
 <div class="container">
 
-  <!-- Payment Section -->
-  <h2>Payment Method</h2>
-  <div style="max-width:420px;">
-    <label>Bkash Number:</label>
-    <input type="text" id="adminBkash" placeholder="Enter Bkash Number">
-    <label>Nagad Number:</label>
-    <input type="text" id="adminNagad" placeholder="Enter Nagad Number">
-    <div style="display:flex;gap:8px;">
-      <button id="savePaymentBtn" style="flex:1">Save Payment Numbers</button>
-      <button id="reloadPaymentBtn" style="flex:1">Reload From Firebase</button>
-    </div>
-    <p class="notice">Payment নম্বর change করলে অবশ্যই Save চাপুন — তা Firebase এ আপডেট হবে।</p>
-  </div>
+<h2>Add / Edit Product</h2>
+<form id="productForm">
+  <input type="text" id="prodName" placeholder="Product Name" required>
+  <input type="text" id="prodCategory" placeholder="Category" required>
+  <input type="number" id="prodPrice" placeholder="Price" step="0.01" required>
+  <textarea id="prodDescription" placeholder="Description" required></textarea>
+  <input type="file" id="prodImage" accept="image/*">
+  <button type="submit" id="addUpdateBtn">Add Product</button>
+</form>
 
-  <!-- Products Section -->
-  <h2>Add / Edit Product</h2>
-  <form id="productForm">
-    <input type="text" id="prodName" placeholder="Product Name" required>
-    <input type="text" id="prodCategory" placeholder="Category" required>
-    <input type="number" id="prodPrice" placeholder="Price" step="0.01" required>
-    <textarea id="prodDescription" placeholder="Product Description" required></textarea>
-    <input type="file" id="prodImage" accept="image/*">
-    <button type="submit" id="addUpdateBtn">Add Product</button>
-  </form>
-
-  <h2>Product List</h2>
-  <table>
-    <thead>
-      <tr><th>Name</th><th>Category</th><th>Price</th><th>Description</th><th>Image</th><th>Action</th></tr>
-    </thead>
-    <tbody id="productList"></tbody>
-  </table>
-
-  <!-- Orders Section -->
-  <h2>Orders</h2>
-  <table>
-    <thead>
-      <tr>
-        <th>Product</th><th>User</th><th>Email</th><th>Phone</th>
-        <th>Payment</th><th>Send Number</th><th>Trnx ID</th><th>Date</th><th>Action</th>
-      </tr>
-    </thead>
-    <tbody id="orderList"></tbody>
-  </table>
+<h2>Product List</h2>
+<table>
+  <thead>
+    <tr><th>Name</th><th>Category</th><th>Price</th><th>Description</th><th>Image</th><th>Action</th></tr>
+  </thead>
+  <tbody id="productList"></tbody>
+</table>
 
 </div>
 
-<!-- Firebase SDK -->
 <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-storage.js"></script>
@@ -101,38 +74,22 @@ firebase.initializeApp(firebaseConfig);
 const db = firebase.database();
 const storage = firebase.storage();
 
-/* Payment Section */
-const adminBkashInput = document.getElementById('adminBkash');
-const adminNagadInput = document.getElementById('adminNagad');
-document.getElementById('savePaymentBtn').onclick = ()=>{
-  db.ref('payment').set({ bkash: adminBkashInput.value, nagad: adminNagadInput.value })
-  .then(()=>alert("Payment Numbers Saved!"));
-};
-document.getElementById('reloadPaymentBtn').onclick = loadPayment;
-function loadPayment(){
-  db.ref('payment').once('value').then(snap=>{
-    const d = snap.val() || {};
-    adminBkashInput.value = d.bkash || "";
-    adminNagadInput.value = d.nagad || "";
-  });
-}
-loadPayment();
-
-/* Product Section */
-const prodForm = document.getElementById('productForm');
+/* Product Form */
+const form = document.getElementById('productForm');
 const prodList = document.getElementById('productList');
 const prodName = document.getElementById('prodName');
 const prodCategory = document.getElementById('prodCategory');
 const prodPrice = document.getElementById('prodPrice');
 const prodDescription = document.getElementById('prodDescription');
 const prodImage = document.getElementById('prodImage');
+
 let editingKey = null;
 
-prodForm.addEventListener('submit', async e=>{
+form.addEventListener('submit', async e=>{
   e.preventDefault();
   const name = prodName.value.trim();
   const category = prodCategory.value.trim();
-  const price = parseFloat(prodPrice.value); // number type
+  const price = parseFloat(prodPrice.value);
   const description = prodDescription.value.trim();
   const file = prodImage.files[0];
 
@@ -142,24 +99,25 @@ prodForm.addEventListener('submit', async e=>{
 
   let imageUrl = "";
   if(file){
-    const storageRef = storage.ref('products/' + Date.now() + '_' + file.name);
-    const snapshot = await storageRef.put(file);
+    const ref = storage.ref('products/' + Date.now() + '_' + file.name);
+    const snapshot = await ref.put(file);
     imageUrl = await snapshot.ref.getDownloadURL();
   }
 
   const productData = { name, category, price, description, image: imageUrl };
 
   if(editingKey){
-    await db.ref('products/' + editingKey).update(productData);
+    await db.ref('products/'+editingKey).update(productData);
     alert("Product Updated");
     editingKey = null;
   } else {
     await db.ref('products').push(productData);
     alert("Product Added");
   }
-  prodForm.reset();
+  form.reset();
 });
 
+/* Load Products */
 db.ref('products').on('value', snap=>{
   prodList.innerHTML = "";
   snap.forEach(child=>{
@@ -170,7 +128,7 @@ db.ref('products').on('value', snap=>{
       <td>${p.category}</td>
       <td>${p.price}</td>
       <td>${p.description}</td>
-      <td>${p.image ? `<img class="thumb" src="${p.image}">` : 'No Image'}</td>
+      <td>${p.image? `<img class="thumb" src="${p.image}">` : 'No Image'}</td>
       <td>
         <button class="edit" onclick="editProduct('${key}')">Edit</button>
         <button class="delete" onclick="deleteProduct('${key}')">Delete</button>
@@ -181,7 +139,7 @@ db.ref('products').on('value', snap=>{
 });
 
 window.editProduct = async function(key){
-  const snap = await db.ref('products/' + key).once('value');
+  const snap = await db.ref('products/'+key).once('value');
   const p = snap.val();
   if(!p) return;
   prodName.value = p.name;
@@ -194,68 +152,9 @@ window.editProduct = async function(key){
 
 window.deleteProduct = function(key){
   if(confirm("Delete this product?")){
-    db.ref('products/' + key).remove();
+    db.ref('products/'+key).remove();
   }
 };
-
-/* Orders Section */
-const orderList = document.getElementById('orderList');
-db.ref('orders').on('value', snap=>{
-  orderList.innerHTML = "";
-  snap.forEach(child=>{
-    const o = child.val(); const key = child.key;
-    const tr = document.createElement('tr');
-    tr.innerHTML = `
-      <td>${o.product}</td>
-      <td>${o.name}</td>
-      <td>${o.email}</td>
-      <td>${o.phone}</td>
-      <td>${o.payment}</td>
-      <td>${o.sendNumber||''}</td>
-      <td>${o.trnx||''}</td>
-      <td>${o.date||''}</td>
-      <td>
-        <button class="done" onclick="markDone('${key}')">Done</button>
-        <button class="print" onclick="printInvoice('${key}')">Print</button>
-      </td>
-    `;
-    orderList.appendChild(tr);
-  });
-});
-
-window.markDone = async function(orderKey){
-  if(!confirm("Mark this order as done?")) return;
-  const snap = await db.ref('orders/'+orderKey).once('value');
-  const order = snap.val(); if(!order) return;
-  await db.ref('completedOrders').push(order);
-  await db.ref('orders/'+orderKey).remove();
-  trimCompletedOrders();
-};
-
-async function trimCompletedOrders(){
-  const snap = await db.ref('completedOrders').once('value');
-  const all = [];
-  snap.forEach(c=>all.push({key:c.key,val:c.val()}));
-  if(all.length>5){
-    const extra = all.slice(0, all.length-5);
-    extra.forEach(e=> db.ref('completedOrders/'+e.key).remove());
-  }
-}
-
-window.printInvoice = async function(orderKey){
-  const snap = await db.ref('orders/'+orderKey).once('value');
-  const o = snap.val(); if(!o) return;
-  const w = window.open('', '', 'width=800,height=600');
-  w.document.write(`<h2>Cloud Mart Invoice</h2>
-    <p><b>Date:</b> ${o.date||''}</p>
-    <p><b>Name:</b> ${o.name||''}</p>
-    <p><b>Email:</b> ${o.email||''}</p>
-    <p><b>Phone:</b> ${o.phone||''}</p>
-    <p><b>Product:</b> ${o.product||''}</p>
-    <p><b>Payment:</b> ${o.payment||''}</p>
-    <p><b>Transaction:</b> ${o.trnx||''}</p>`);
-  w.document.close(); w.print();
-}
 </script>
 </body>
 </html>
