--- a/index.html
+++ b/index.html
@@ -94,19 +94,22 @@ img.thumb { width:50px; height:50px; object-fit:cover; border-radius:6px; }
 
 </div>
 
+<!-- Firebase SDK -->
 <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-storage.js"></script>
 
 <script>
+// Correct Firebase Config
 const firebaseConfig = {
   apiKey: "AIzaSyCl9ENd3XOP1KeutD7s1zSiXYSuz4VIqGU",
   authDomain: "cloud-mart01.firebaseapp.com",
   databaseURL: "https://cloud-mart01-default-rtdb.firebaseio.com",
   projectId: "cloud-mart01",
-  storageBucket: "cloud-mart01.appspot.com",
+  storageBucket: "cloud-mart01.appspot.com", // <- ঠিক করা
   messagingSenderId: "656495467691",
-  appId: "1:656495467691:web:b0c0f7356b36af5de12bee"
+  appId: "1:656495467691:web:b0c0f7356b36af5de12bee",
+  measurementId: "G-PXLYR809MM"
 };
 firebase.initializeApp(firebaseConfig);
 const db = firebase.database();
@@ -284,7 +287,8 @@ window.printInvoice = async function(orderKey){
     <p><b>Phone:</b> ${o.phone||''}</p>
     <p><b>Product:</b> ${o.product||''}</p>
     <p><b>Payment:</b> ${o.payment||''}</p>
-    <p><b>Transaction:</b> ${o.trnx||''}</p>`); w.document.close(); w.print();
+    <p><b>Transaction:</b> ${o.trnx||''}</p>`);
+  w.document.close(); w.print();
 };
 </script>
 </body>
