--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ img.thumb { width:50px; height:50px; object-fit:cover; border-radius:6px; }
   <input type="text" id="prodName" placeholder="Product Name" required>
   <input type="text" id="prodCategory" placeholder="Category" required>
   <input type="number" id="prodPrice" placeholder="Price" step="0.01" required>
-  <textarea id="prodDescription" placeholder="Description" required></textarea>
+  <input id="prodDescription" placeholder="Description" required>
   <input type="file" id="prodImage" accept="image/*">
   <input type="text" id="imagePreviewInput" placeholder="Image Preview" readonly style="flex:1; padding:8px; border:1px solid #ccc; border-radius:5px;">
   <button type="submit" id="addUpdateBtn">Add Product</button>
